--- a/src/components/Content/NavigationItem.astro
+++ b/src/components/Content/NavigationItem.astro
@@ -1,7 +1,7 @@
 ---
 import t from '@language/language.json';
 import { Lang } from '@language/language';
-import type { NavPage } from '@utilities/NavPage.astro';
+import type { NavPage } from '@utilities/NavigationTypes';
 
 // Properties
 type Props = {
