--- a/public/css/main.css
+++ b/public/css/main.css
@@ -203,8 +203,99 @@ tbody tr:nth-child(odd) {
   }
 }
 
-/* Main */
+/* Header */
+.site-header {
+    color: var(--fore-head);
+    background-color: var(--aft-head);
+    text-align: center;
+    font-size: 2rem;
+    font-size: clamp(1.2em, 4vw, 2em);
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
 
+.site-header a {
+    color: var(--link-head);
+    text-decoration: none;
+}
+
+.site-header a:hover,
+.site-header a:focus {
+    color: var(--link-alt-head);
+    background-color: unset;
+}
+
+.site-header .site-title {
+    letter-spacing: -1px;
+    text-transform: uppercase;
+    margin: 0 30px;
+    display: block;
+}
+
+.site-header .navigation-icon {
+    display: none;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    stroke: var(--link-head);
+}
+
+.site-header .search-icon {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    stroke: var(--link-head);
+}
+
+@media (max-width: 860px) {
+  .site-header .navigation-icon {
+    display: block;
+  }
+}
+
+/* Navigation */
+
+nav.site-nav.sticky {
+    align-self: start;
+    position: sticky;
+}
+
+nav.site-nav h2 {
+    margin-top: 0.1em;
+    display: none;
+}
+
+@media (max-width: 860px) {
+  nav.site-nav h2 {
+      display: block;
+  }
+
+  nav.site-nav {
+      grid-row: 2;
+  }
+}
+
+/* Main content group */
+
+.content-group {
+    display: grid;
+    grid-template-columns: var(--navigation-width) auto;
+    gap: var(--grid-gap);
+    max-width: var(--grid-max-width);
+    width: var(--grid-width);
+    margin: var(--block-gap) auto var(--block-gap) auto;
+    min-height: 75vh;
+}
+
+@media (max-width: 860px) {
+  /* Content First on Small Screens */
+  .content-group {
+      grid-template-columns: auto;
+      grid-template-rows: 1fr auto;
+  }
+}
 
 main {
     max-width: calc(var(--grid-max-width) - var(--navigation-width) - var(--grid-gap));
@@ -230,6 +321,17 @@ main ul ol, main ul ul, main ol ol, main ol ul {
         width: var(--grid-width);
     }
   }
+
+/* Footer */
+
+.site-footer {
+    text-align: center;
+    padding: 0.5rem 0;
+    width: 100%;
+    color: var(--fore-head);
+    background-color: var(--aft-head);
+    margin: var(--block-gap) auto 0 auto;
+}
 
 /* Overlay (Mobile Navigation, Search) */
 
