--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -1,13 +1,8 @@
 ---
-import { menu } from '../../navigation';
 import t from '@language/language.json';
 import { Lang } from '@language/language';
 import NavigationItem from '@content/NavigationItem.astro';
-import { getNavigation } from '@utilities/PageQueries.astro';
-import { mapNavPage } from '@utilities/NavPage.astro';
-import { NavPage, isNavPage } from '@utilities/NavigationTypes';
-import { showInMenu } from '@utilities/PageTypeFilters';
-import type { MarkdownInstance } from 'astro';
+import { getMenu } from '@utilities/Navigation.astro';
 
 // Properties
 type Props = {
@@ -20,53 +15,8 @@ const _ = Lang(lang);
 
 // Logic
 const currentUrl = new URL(Astro.request.url);
-
-const setCurrent = (item: NavPage) => {
-  item.isOpen = currentUrl.pathname.startsWith(item.url);
-  item.ariaCurrent = item.url == currentUrl.pathname
-    ? 'page'
-    : false;
-  item.children.forEach(setCurrent);
-}
-
-let pages: NavPage[] = []
-
-for (let i = 0; i < menu.length; i++) {
-  const item = menu[i];
-  if (isNavPage(item)) {
-      setCurrent(item);
-      pages.push(item);
-  } else {
-    const p = await getNavigation(currentUrl);
-    for (let j = 0; j < p.length; j++) {
-      pages.push(p[j]);
-    }
-  }
-}
+const pages = await getMenu(currentUrl);
 ---
-<style>
-/* Navigation */
-
-nav.site-nav.sticky {
-    align-self: start;
-    position: sticky;
-}
-
-nav.site-nav h2 {
-    margin-top: 0.1em;
-    display: none;
-}
-
-@media (max-width: 860px) {
-  nav.site-nav h2 {
-      display: block;
-  }
-
-  nav.site-nav {
-      grid-row: 2;
-  }
-}
-</style>
 <nav class="site-nav" id="site-nav" aria-label={ _(t.aria.site_navigation) }>
   <h2 class="site-nav-title">{ _(t.navigation.title) }</h2>
   <ul>
