--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -25,7 +25,7 @@ const _ = Lang(lang);
     <line x1="4" y1="18" x2="20" y2="18" />
   </svg></a>
   <a href="/" class="site-title">{ SITE.title }</a>
-  <a href="/search/" class="search-icon" title={ _(t.header.open_search) }><svg xmlns="http://www.w3.org/2000/svg" 
+  <a href="/search" class="search-icon" title={ _(t.header.open_search) }><svg xmlns="http://www.w3.org/2000/svg" 
     width="40" height="40" viewBox="0 0 24 24" stroke-width="1" 
     fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
