--- a/src/components/Content/Footer.astro
+++ b/src/components/Content/Footer.astro
@@ -1,7 +1,7 @@
 ---
-import { SITE } from '../../config';
 import t from '@language/language.json';
 import { Lang } from '@language/language';
+import { SITE } from '../../config';
 
 // Properties
 type Props = {
@@ -17,7 +17,7 @@ const _ = Lang(lang);
 ---
 <footer class="site-footer" id="site-footer">
   <p>{ _(t.footer.copyright) } &copy; { new Date().getFullYear() } { SITE.owner }</p>
-  <nav class="skip-links" aria-label={ _(t.aria.back_to_top) }>
+  <nav aria-label={ _(t.aria.back_to_top) }>
     <a href="#site-top">{ _(t.skiplinks.skip_to_top) }</a>
   </nav>
 </footer>
