--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -1,6 +1,6 @@
 ---
-import t from '@language/language.json';
-import { Lang } from '@language/language';
+import t from '@utilities/language.json';
+import { Lang } from '@utilities/language.astro';
 import { SITE, Frontmatter } from '../../config';
 import { formatDate } from '@utilities/DateFormat';
 import { getAuthorList } from '@utilities/Authors.astro';
