--- a/src/components/Content/Footer.astro
+++ b/src/components/Content/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import t from '@language/language.json';
-import { Lang } from '@language/language';
+import t from '@utilities/language.json';
+import { Lang } from '@utilities/language.astro';
 import { SITE } from '../../config';
 
 // Properties
