--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -1,6 +1,6 @@
 ---
-import t from '@language/language.json';
-import { Lang } from '@language/language';
+import t from '@utilities/language.json';
+import { Lang } from '@utilities/language.astro';
 import { getMenu } from '@utilities/Navigation.astro';
 import NavigationItem from '@content/NavigationItem.astro';
 
