--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -1,18 +1,18 @@
 ---
-import * as CONFIG from '../config';
-import t from '@language/language.json';
-import { Lang } from '@language/language';
-import Default from '@layouts/Default.astro';
+import t from '@utilities/language.json';
+import { Lang } from '@utilities/language.astro';
 import { sortByPubDateDesc } from '@utilities/PageTypeFilters';
 import { formatDate } from '@utilities/DateFormat';
+import { SITE, Frontmatter } from '../config';
+import Default from '@layouts/Default.astro';
 
 // Properties
 type Props = {
-    frontmatter: CONFIG.Frontmatter
+    frontmatter: Frontmatter
 };
 const { frontmatter } = Astro.props as Props;
-const lang = frontmatter.lang ?? CONFIG.SITE.default.lang;
-const textDirection = frontmatter.dir ?? CONFIG.SITE.default.dir;
+const lang = frontmatter.lang ?? SITE.default.lang;
+const textDirection = frontmatter.dir ?? SITE.default.dir;
 
 // Language
 const _ = Lang(lang);
@@ -33,7 +33,7 @@ const authorPages = allPages
         <article>
         <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
         <div class="list-item-content">
-        <span class="post-meta">{ formatDate(post.frontmatter, lang, CONFIG.SITE) }</span>
+        <span class="post-meta">{ formatDate(post.frontmatter, lang, SITE) }</span>
         <h2>
             <a href={ post.url }>{ post.frontmatter.title }</a>
         </h2>
