Tired of mis-typing "@utilities". It's now "@util".

--- a/src/components/Content/Breadcrumbs.astro
+++ b/src/components/Content/Breadcrumbs.astro
@@ -1,7 +1,7 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
-import { getBreadcrumbs } from '@utilities/Breadcrumbs.astro';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
+import { getBreadcrumbs } from '@util/Breadcrumbs.astro';
 
 // Properties
 type Props = {
