--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -1,9 +1,9 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
 import { SITE, Frontmatter } from '../../config';
-import { formatDate } from '@utilities/DateFormat';
-import { getAuthorList } from '@utilities/Authors.astro';
+import { formatDate } from '@util/DateFormat';
+import { getAuthorList } from '@util/Authors.astro';
 import Navigation from '@content/Navigation.astro';
 
 // Properties
