--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -1,7 +1,7 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
-import { getMenu } from '@utilities/Navigation.astro';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
+import { getMenu } from '@util/Navigation.astro';
 import NavigationItem from '@content/NavigationItem.astro';
 
 // Properties
