--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,6 +1,6 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
 
 // Properties
 type Props = {
