--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -1,8 +1,8 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
-import { sortByPubDateDesc } from '@utilities/PageTypeFilters';
-import { formatDate } from '@utilities/DateFormat';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
+import { sortByPubDateDesc } from '@util/PageTypeFilters';
+import { formatDate } from '@util/DateFormat';
 import { SITE, Frontmatter } from '../config';
 import Default from '@layouts/Default.astro';
 
