--- a/src/components/Content/NavigationItem.astro
+++ b/src/components/Content/NavigationItem.astro
@@ -1,7 +1,7 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
-import type { NavPage } from '@utilities/NavigationTypes';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
+import type { NavPage } from '@util/NavigationTypes';
 
 // Properties
 type Props = {
