--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -1,6 +1,6 @@
 ---
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
 import { SITE, Frontmatter } from '../config';
 import Default from '@layouts/Default.astro';
 
