--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -1,11 +1,11 @@
 ---
 import type { Page, MarkdownInstance } from 'astro';
-import t from '@utilities/language.json';
-import { Lang } from '@utilities/language.astro';
+import t from '@util/language.json';
+import { Lang } from '@util/language.astro';
 import { Frontmatter, SITE } from '../../config';
 import { getPageLinks } from '@paging/PageLinks';
-import { sortByPubDateDesc } from '@utilities/PageTypeFilters';
-import { formatDate } from '@utilities/DateFormat';
+import { sortByPubDateDesc } from '@util/PageTypeFilters';
+import { formatDate } from '@util/DateFormat';
 import SkipLinks from '@content/SkipLinks.astro';
 import Breadcrumbs from '@content/Breadcrumbs.astro';
 import Header from '@content/Header.astro';
