--- a/src/components/Head/HtmlHead.astro
+++ b/src/components/Head/HtmlHead.astro
@@ -1,5 +1,6 @@
 ---
 import { SITE, OPEN_GRAPH } from '../../config';
+import { addSlashToUrl } from '@util/Url.astro';
 
 // Properties
 type Props = {
@@ -10,7 +11,7 @@ const { frontmatter } = Astro.props;
 // Logic
 const imageSrc = frontmatter.bannerImage?.src ?? OPEN_GRAPH.image.src;
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const canonicalURL =  addSlashToUrl(new URL(Astro.url.pathname, Astro.site));
 ---
 	<head>
         <meta charset="utf-8" />
