--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -7,15 +7,9 @@ import { formatDate } from '@util/DateFormat';
 import { getPageLinks } from '@util/PageLinks.astro';
 import { sortByPubDateDesc } from '@util/PageTypeFilters';
 import { addSlashToAddress } from '@util/Url.astro';
-import SkipLinks from '@content/SkipLinks.astro';
-import Breadcrumbs from '@content/Breadcrumbs.astro';
-import Header from '@content/Header.astro';
-import Footer from '@content/Footer.astro';
-import ContentGroup from '@content/ContentGroup.astro';
-import Head from '@head/HtmlHead.astro';
+import Default from '@layouts/Default.astro';
 
 const lang = SITE.default.lang;
-const textDirection = SITE.default.dir;
 
 const frontmatter: Frontmatter = {
   layout: '../layouts/Default.astro',
@@ -52,47 +46,35 @@ export async function getStaticPaths({ paginate }: any) {
 // Page Links
 const pageLinks = getPageLinks(SITE.pageLinks, page.lastPage, page.currentPage, page.url.current);
 ---
-<html dir={ textDirection } lang={ lang } class="initial">
-    <Head frontmatter={ frontmatter } />
-    <body>
-        <SkipLinks lang={ lang } />
-        <Header lang={ lang } />
-        <Breadcrumbs lang={ lang } />
-        <ContentGroup lang={ lang } frontmatter={ frontmatter }>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet elit sodales, egestas odio eu, interdum nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elit odio, dapibus nec finibus sit amet, aliquam a tortor.
-
-          <!--Display the current page number. Astro.params.page can also be used!-->
-          <h2>Page {page.currentPage}</h2>
-          <ul class="post-list">
-            <!--List the array of astronaut info-->
-            {page.data.map((post) => (
-            <li class="list-item" data-destination={ post.url }>
-              <article>
-                <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
-                <div class="list-item-content">
-                <span class="post-meta">{ formatDate(post.frontmatter, lang, SITE) }</span>
-                <h3>
-                  <a href={ post.url }>{ post.frontmatter.title }</a>
-                </h3>
-              </div>
-              </article>
-            </li>
-            ))}
-          </ul>
-          
-          <nav class="post-paging" aria-label={ _(aria.paging) }>
-          {page.url.prev
-            ? <a href={ addSlashToAddress(page.url.prev) }>{ _(articles.previous) }</a>
-            : <span>{ _(articles.previous) }</span>}
-          {pageLinks.map((link) => (
-              <a href={ addSlashToAddress(link.url) } aria-current={ link.ariaCurrent }>{ link.title }</a>
-          ))}
-          {page.url.next
-            ? <a href={ addSlashToAddress(page.url.next) }>{ _(articles.next) }</a>
-            : <span>{ _(articles.next) }</span>}
-          </nav>
-        </ContentGroup>
-        <Footer lang={ lang } />
-        <script src="/js/main.js" type="module" async></script>
-    </body>
-</html>
+<Default frontmatter={frontmatter}>
+  <!--Display the current page number. Astro.params.page can also be used!-->
+  <h2>Page {page.currentPage}</h2>
+  <ul class="post-list">
+    <!--List the array of astronaut info-->
+    {page.data.map((post) => (
+    <li class="list-item" data-destination={ addSlashToAddress(post.url) }>
+      <article>
+        <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
+        <div class="list-item-content">
+        <span class="post-meta">{ formatDate(post.frontmatter, lang, SITE) }</span>
+        <h3>
+          <a href={ addSlashToAddress(post.url) }>{ post.frontmatter.title }</a>
+        </h3>
+      </div>
+      </article>
+    </li>
+    ))}
+  </ul>
+  
+  <nav class="post-paging" aria-label={ _(aria.paging) }>
+  {page.url.prev
+    ? <a href={ addSlashToAddress(page.url.prev) }>{ _(articles.previous) }</a>
+    : <span>{ _(articles.previous) }</span>}
+  {pageLinks.map((link) => (
+      <a href={ addSlashToAddress(link.url) } aria-current={ link.ariaCurrent }>{ link.title }</a>
+  ))}
+  {page.url.next
+    ? <a href={ addSlashToAddress(page.url.next) }>{ _(articles.next) }</a>
+    : <span>{ _(articles.next) }</span>}
+  </nav>
+</Default>
