Upgrading .ts to .astro

--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -3,7 +3,7 @@ import t from '@util/language.json';
 import { Lang } from '@util/language.astro';
 import { SITE, Frontmatter } from '../config';
 import { sortByPubDateDesc } from '@util/PageTypeFilters';
-import { formatDate } from '@util/DateFormat';
+import { formatDate } from '@util/DateFormat.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 import Default from '@layouts/Default.astro';
 
