--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -3,7 +3,7 @@ import type { Page, MarkdownInstance } from 'astro';
 import t from '@util/language.json';
 import { Lang } from '@util/language.astro';
 import { Frontmatter, SITE } from '../../config';
-import { formatDate } from '@util/DateFormat';
+import { formatDate } from '@util/DateFormat.astro';
 import { getPageLinks } from '@util/PageLinks.astro';
 import { sortByPubDateDesc } from '@util/PageTypeFilters';
 import { addSlashToAddress } from '@util/Url.astro';
