--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -2,7 +2,7 @@
 import t from '@util/language.json';
 import { Lang } from '@util/language.astro';
 import { SITE, Frontmatter } from '../../config';
-import { formatDate } from '@util/DateFormat';
+import { formatDate } from '@util/DateFormat.astro';
 import { getAuthorList } from '@util/Authors.astro';
 import { addSlashToAddress } from '@util/Url.astro';
 import Navigation from '@content/Navigation.astro';
